<resources>
    <string name="app_name">Ideal Body Weight</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="programCreated">The program is created by</string>
    <string name="Creator">Your Name</string>
    <string name="About">About</string>
    <string name="broca">BROCA INDEX</string>
    <string name="BMI">Body Mass Index</string>
    <string name="gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Height">Height</string>
    <string name="AddInformation">Add your information here</string>
    <string name="tryagain">Try again</string>
    <string name="Mass">Mass</string>
</resources>
